--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+@import url("//hello.myfonts.net/count/2d242c");  
+@font-face {font-family: 'GalanoClassic-Bold';src: url('../fonts/2D242C_0_0.eot');src: url('../fonts/2D242C_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/2D242C_0_0.woff2') format('woff2'),url('../fonts/2D242C_0_0.woff') format('woff'),url('../fonts/2D242C_0_0.ttf') format('truetype');}
+@font-face {font-family: 'GalanoClassic-ExtraLight';src: url('../fonts/2D242C_1_0.eot');src: url('../fonts/2D242C_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/2D242C_1_0.woff2') format('woff2'),url('../fonts/2D242C_1_0.woff') format('woff'),url('../fonts/2D242C_1_0.ttf') format('truetype');}
+
 * {
     position: relative;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -99,7 +103,7 @@ textarea {
 }
 
 body {
-    font-family: 'Galano Classic Extra Light';
+    font-family: 'GalanoClassic-ExtraLight';
     /*-moz-font-feature-settings: "liga=1, dlig=1";
     -ms-font-feature-settings: "liga", "dlig";
     -webkit-font-feature-settings: "liga", "dlig";
@@ -119,7 +123,7 @@ sup {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Galano Classic Bold';
+    font-family: 'GalanoClassic-Bold';
     /*-moz-font-feature-settings: initial;
     -ms-font-feature-settings: initial;
     -webkit-font-feature-settings: initial;
@@ -243,7 +247,7 @@ a {
                     border-bottom: 1px solid #fff;
                     line-height: 1.4;
                     padding: 7px 1px 1px 1px;
-                    font-family: 'Galano Classic Bold';
+                    font-family: 'GalanoClassic-Bold';
                     text-transform: uppercase;
                     font-size: 0.9em;
                     margin: 10% 10% 0 10%;
